<resources>
    <string name="app_name">GrapeBhumi</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Signup Activity -->
    <string name="txt_welcome">Welcome!</string>
    <string name="txt_enter_name">Enter your name</string>
    <string name="txt_enter_pass">Enter password</string>
    <string name="txt_enter_phone">Enter your mobile number</string>
    <string name="txt_enter_otp">Enter OTP</string>
    <string name="btn_get_otp">Get OTP</string>
    <string name="btn_signup">Sign Up</string>
    <string name="txt_forgot_pass">Forgot Password?</string>
    <string name="txt_or">OR</string>
    <string name="txt_signup_with">Sign up with</string>


    <!-- Home Fragment -->
    <string name="home_frag_crop">Diagnose and treat your crop</string>
    <string name="home_frag_weather">Check Current Weather Conditions</string>

    <!-- Navigation Header -->
    <string name="txt_logo_name">Grape Bhumi</string>

    <!-- Navigation Drawer items -->
    <string name="txt_home">Home</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_others">Others</string>
    <string name="txt_share">Share</string>
    <string name="txt_privacypolicy">Privacy Policy</string>
    <string name="txt_termscondictions">Terms &amp; conditions</string>
    <string name="txt_aboutus">About Us</string>
    <string name="txt_logout">Logout</string>

    <!-- Bottom Navigation Menu Item -->
    <string name="txt_btnav_home">Home</string>
    <string name="txt_btnav_cropcare">Crop Care</string>
    <string name="txt_btnav_videos">Videos</string>
    <string name="txt_btnav_weather">Weather</string>
    <string name="txt_btnav_advice">Advisory</string>

    <!-- Profile Fragment -->
    <string name="txt_full_name">Full name</string>
    <string name="hint_name">Alex John</string>
    <string name="txt_mobile_number">Mobile Number</string>
    <string name="hint_mobile_number">9876543210</string>
    <string name="txt_state">State</string>
    <string name="txt_district">District</string>
    <string name="txt_taluka">Taluka</string>
    <string name="txt_village">Village</string>
    <string name="txt_save_profile">Save Profile</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Hello home fragment</string>
    <string name="profile_fragment">Hello profile fragment</string>
    <string name="share_fragment">Hello share fragment</string>

    <string name="aboutus_fragment">Aboutus fragment</string>
    <string name="logout_fragment">Logout Fragmnet</string>

    <string name="bottom_fragment_Home">Home</string>
    <string name="bottom_fragment_cropcare">Crop Care</string>
    <string name="bottom_fragment_weather">Weather</string>
    <string name="bottom_fragment_videos">Videos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>